# Twisted-Hessian-Curve

./: CMakeLists.txt  README.md
NestekenoCpp/: CurveParams.hpp  Point.cpp  Point.hpp  main.cpp  ~$чет ПАЗИ.docx  Отчет ПАЗИ.docx
NestekenoCpp.xcodeproj/: project.pbxproj
NestekenoCpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NestekenoCpp.xcodeproj/project.xcworkspace/xcuserdata/igor.xcuserdatad/: UserInterfaceState.xcuserstate
NestekenoCpp.xcodeproj/xcuserdata/igor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NestekenoCpp.xcodeproj/xcuserdata/igor.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CurveParams.hpp  Point.cpp  Point.hpp  main.cpp
